# nonebot-plugin-obastatus

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml
cache/: dashboard.json  rank.json  version.json
nonebot_plugin_obastatus/: __init__.py  config.py
