[project]
name = "nonebot_plugin_obastatus"
version = "1.0.1"
description = "获取 OpenBMCLAPI 相关数据"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot2<3.0.0,>=2.0.0",
    "nonebot-adapter-onebot<3.0.0,>=2.2.2",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
    "nonebot-plugin-localstore<1.0.0,>=0.6.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_localstore"]
plugin_dirs = ["nonebot_plugin_obastatus"]
builtin_plugins = []
