[project]
name = "nonebot_plugin_obastatus"
version = "1.0.4"
description = "获取 OpenBMCLAPI 相关数据"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot2<3.0.0,>=2.2.0",
    "httpx<1.0.0,>=0.27.0",
    "loguru<1.0.0,>=0.7.2",
    "nonebot-plugin-alconna<1.0.0,>=0.47.1",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
    "nonebot-plugin-localstore<1.0.0,>=0.6.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_localstore", "nonebot_plugin_alconna"]
plugin_dirs = ["nonebot_plugin_obastatus"]
builtin_plugins = []
